# OperationsWithPolynomials

./: CMakeLists.txt
src/app/: CMakeLists.txt  dividedialog.cpp  dividedialog.h  dividedialog.ui  inputdialog.cpp  inputdialog.h  inputdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectdialog.cpp  selectdialog.h  selectdialog.ui  vardialog.cpp  vardialog.h  vardialog.ui
src/lib/: CMakeLists.txt  list.h  monomial.cpp  monomial.h  node.h  polynomial.cpp  polynomial.h  validator.cpp  validator.h
